Fix little error in `parameter_shift.ipynb`

--- a/tutorials/parameter_shift_rule.ipynb
+++ b/tutorials/parameter_shift_rule.ipynb
@@ -202,7 +202,7 @@
    "id": "2af2b1fc",
    "metadata": {},
    "source": [
-    "This is the momento to write a function which returns the `tensorflow` values of the gradients. "
+    "This is the moment to write a function which returns the `tensorflow` values of the gradients. "
    ]
   },
   {
