integrate md into notebook

--- a/examples/qcnn_classifier/qcnn_demo.ipynb
+++ b/examples/qcnn_classifier/qcnn_demo.ipynb
@@ -1,16 +1,79 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "441d162d-9c1a-46eb-b213-6f63d5517676",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# QCNN demo"
+    "# Quantum Convolutional Neural Network Classifier\n",
+    "\n",
+    "Code at: [https://github.com/qiboteam/qibo/tree/master/examples/qcnn_classifier](https://github.com/qiboteam/qibo/tree/master/examples/qcnn_classifier).\n",
+    "Please note that [scikit-learn](https://scikit-learn.org/stable/install.html) is needed to visualize the results."
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "id": "514ef70a-17db-4424-804f-d735a93ce5a8",
+   "metadata": {},
+   "source": [
+    "## Problem overview\n",
+    "This tutorial implements a simple [Quantum Convolutional Neural Network](https://www.nature.com/articles/s41567-019-0648-8) (QCNN), which is a translationally invariant algorithm analogous to the classical [convolutional neural network](https://proceedings.neurips.cc/paper_files/paper/2012/file/c399862d3b9d6b76c8436e924a68c45b-Paper.pdf). This example demonstrates the use of the QCNN as a quantum classifier, which attempts to classify ground states of a translationally invariant quantum system, the transverse field Ising model, based on whether they are in the ordered or disordered phase. The (randomized) statevector data provided are those of a 4-qubit system. Accompanying each state is a label: +1 (disordered phase) or -1 (ordered phase).\n",
+    "\n",
+    "Through the sequential reduction of entanglement, this network is able to perform classification from the final measurement of a single qubit.\n",
+    "\n",
+    "Workflow of QCNN model:\n",
+    "![workflow](images/workflow.PNG)\n",
+    "\n",
+    "Schematic of QCNN model:\n",
+    "![schematic](images/structure.PNG)\n",
+    "\n",
+    "Convolutional layer for 4 qubits as an example:\n",
+    "![convolution](images/convolution_4qubits.PNG)\n",
+    "\n",
+    "Pooling layer for 4 qubits as an example:\n",
+    "![pooling](images/pooling_4qubits.PNG)\n",
+    "\n",
+    "where in the above, $R(\\theta_{i,j,k}) = RZ(\\theta_k) RY(\\theta_j) RX(\\theta_i)$:\n",
+    "![R](images/RxRyRz.PNG)\n",
+    "\n",
+    "$U_{q_a, q_b}(\\theta_{i,j,k}) = RXX(\\theta_k) RYY(\\theta_j) RZZ(\\theta_i)$ is a two-qubit gate acting on qubits $q_a$ and $q_b$:\n",
+    "![U](images/U.PNG)\n",
+    "\n",
+    "and $R^{\\dagger}(\\theta_{i,j,k}) = RX(-\\theta_i) RY(-\\theta_j) RZ(-\\theta_k)$:\n",
+    "![RT](images/RT.PNG)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e9427ed-3f12-47fc-8048-ea258e1ec19c",
+   "metadata": {},
+   "source": [
+    "## How to use the QCNN class\n",
+    "For more details on the QuantumCNN class, please refer to the documentation. Here we recall some of the necessary arguments when instantiating a QuantumCNN object:\n",
+    "- `nqubits` (int): number of quantum bits. It should be larger than 2 for the model to make sense.\n",
+    "- `nlayers` (int): number of layers of the QCNN variational ansatz.\n",
+    "- `nclasses` (int): number of classes of the training set (default=2).\n",
+    "- `params`: list to initialise the variational parameters (default=None).\n",
+    "\n",
+    "After creating the object, one can proceed to train the model. For this, the `QuantumCNN.minimize` method can be used with the following arguments (refer to the documentation for more details)\"\n",
+    "- `init_theta`: list or numpy.array with the angles to be used in the circuit\n",
+    "- `data`: the training data\n",
+    "- `labels`: numpy.array containing the labels for the training data\n",
+    "- `nshots` (int):number of runs of the circuit during the sampling process (default=10000)\n",
+    "- `method` (string): str 'classical optimizer for the minimization'. All methods from scipy.optimize.minmize are suported (default='Powell')."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01e19126-53b0-49c4-8919-e6db4cb77cb0",
+   "metadata": {},
+   "source": [
+    "## QCNN Demo"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "77098dca-abbb-451e-aab7-50453a8457db",
    "metadata": {},
@@ -44,7 +107,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b7a04e9f-dd64-4059-bbb4-9afea3da8495",
    "metadata": {},
@@ -65,7 +127,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "614a17b2-aee0-49fe-ad7a-4cd4b93986af",
    "metadata": {},
@@ -124,7 +185,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a817dceb-1097-4625-8ccf-9bdb1eda6c23",
    "metadata": {},
@@ -148,7 +208,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "44d641bc-8a0c-4c05-82fa-2066a070a735",
    "metadata": {},
@@ -185,7 +244,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ccebe817-906a-4328-8713-9fcd99c07972",
    "metadata": {},
@@ -208,7 +266,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "19f90348-17f0-4fda-8950-5d95a3216b8e",
    "metadata": {},
@@ -227,7 +284,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fc3f4f2a-3388-4ce5-b0fe-0304a5be56a2",
    "metadata": {},
@@ -258,7 +314,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a28a68bf-8246-46c4-9d3d-c1ef9c2f7813",
    "metadata": {},
@@ -279,7 +334,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "995b90f9-5441-4a4d-bb3f-d852c7452af4",
    "metadata": {},
@@ -363,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
