fixing doc typos

--- a/doc/source/code-examples/tutorials/qfiae/qfiae_demo.ipynb
+++ b/doc/source/code-examples/tutorials/qfiae/qfiae_demo.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d61fa78",
    "metadata": {
     "tags": []
    },
@@ -16,7 +15,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e2e0ce",
    "metadata": {},
    "source": [
     "## Problem overview\n",
@@ -40,7 +38,7 @@
     " \n",
     " 4. The Iterative Quantum Amplitude Estimation (IQAE) model of qibo, which corresponds with the following quantum circuit:\n",
     " ![iqae](images/iqae.png)\n",
-    " is used to estimate the integral of each trigonometric piece, $sin(\\omega_i x)$ or $cos(\\omega_j x)$, of the Fourier series.\n",
+    " is used to estimate the integral of each trigonometric piece, $\\sin(\\omega_i x)$ or $\\cos(\\omega_j x)$, of the Fourier series.\n",
     " \n",
     " 5. The integrals obtained are summed with their corresponding coefficients to derive the final integral result.\n",
     "\n",
@@ -52,7 +50,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb21709",
    "metadata": {},
    "source": [
     "## QFIAE Demo"
@@ -60,7 +57,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de3447f0",
    "metadata": {},
    "source": [
     "Let's define the problem:\n",
@@ -68,15 +64,18 @@
     "We are interested in computing the following example integral:\n",
     "$$ \\int_0^1 dx(1+x^2),$$\n",
     "so the easiest way to define our problem variables would be:\n",
+    "\n",
     " - $x_{min}$: $0$\n",
+    " \n",
     " - $x_{max}$: $1$\n",
+    " \n",
     " - $p(x)$: $dx$\n",
+    " \n",
     " - $f(x)$: $1+x^2$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "498f71ec",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -84,11 +83,13 @@
     "First, we must decide the variables for our problem. \n",
     "\n",
     "Regarding the definition of the problem:\n",
+    "\n",
     "- `x_min_int`: the lower limit of the problem integral.\n",
     "\n",
     "- `x_max_int`: the upper limit of the problem integral.\n",
     "\n",
     "Regarding the QNN:\n",
+    "\n",
     "- `number_of_layers`: number of layers of the QNN.\n",
     "\n",
     "- `number_of_epochs`: number of epochs, i.e. iterations of the AdamDescent Optimizer.\n",
@@ -120,7 +121,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1328a7e3",
    "metadata": {},
    "source": [
     "Include necessary packages:"
@@ -129,7 +129,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1225fdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +141,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d89d483",
    "metadata": {},
    "source": [
     "### 1. Defining $f(x)$, $x_{min}$, $x_{max}$"
@@ -151,7 +149,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "009b6c8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,15 +164,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c0e821b",
    "metadata": {},
    "source": [
-    "### 2. Defining and fitting the QNN"
+    "### 2. Defining and training the QNN"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ae958367",
    "metadata": {},
    "source": [
     "We import the QNN: `vqregressor_linear_ansatz`, which is a modified version of the vqregressor found at https://github.com/qiboteam/qibo/tree/master/examples/vqregressor. In our modified version, we replace the ansatz function used in the original implementation with the one we have previously defined."
@@ -184,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aa7430c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +187,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7f67636",
    "metadata": {},
    "source": [
     "We define the parameters of the QNN"
@@ -202,7 +195,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "25b8ee05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +212,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c4e62626",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +354,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05a153bc",
    "metadata": {},
    "source": [
     "### 3. Obtaining the Fourier series from the QNN"
@@ -372,7 +362,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "65926d44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +378,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f67e0d99",
    "metadata": {},
    "source": [
     "Let's see how they look like"
@@ -398,7 +386,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "051eddb0",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +412,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcaa279c",
    "metadata": {},
    "source": [
     "Now we check that Fourier series obtained it's correct and also fits the function "
@@ -434,7 +420,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d638d8b9",
    "metadata": {
     "scrolled": true
    },
@@ -461,7 +446,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92e26e11",
    "metadata": {},
    "source": [
     "### 4. Integrating every trigonometric piece"
@@ -469,7 +453,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa90ab7c",
    "metadata": {},
    "source": [
     "First we should rewrite the Fourier coefficients in a way that will be easy to integrate the trigonometric functions Sine and Cosine"
@@ -478,7 +461,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5be285e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +473,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb496b6",
    "metadata": {},
    "source": [
     "Let's visualize what we have and note that 0 stands for Cosine and 1 stands for Sine"
@@ -500,7 +481,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "81206fbf",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +517,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27d622fc",
    "metadata": {},
    "source": [
     "Before implementeing the IQAE model, we should define the quantum circuits $\\mathcal{A}$ and $\\mathcal{Q}$.\n",
@@ -556,7 +535,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "908965a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +560,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4785d95",
    "metadata": {},
    "source": [
     "Then, the circuit $\\mathcal{A}$ will be:"
@@ -591,7 +568,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6aad3c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +583,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbbe841a",
    "metadata": {},
    "source": [
     "Let's see how the circuit A looks like for n_qubits=3"
@@ -616,7 +591,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e9a9ae81",
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +611,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "871d70f7",
    "metadata": {},
    "source": [
     "On the other hand, the circuit $\\mathcal{Q}$ is defined as:\n",
@@ -650,7 +623,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ead5c3b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +675,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f9cf0e9",
    "metadata": {},
    "source": [
     "Then the circuit $\\mathcal{Q}$ will be:"
@@ -712,7 +683,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fc8249f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +705,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40087db9",
    "metadata": {},
    "source": [
     "Let's see how the circuit Q looks like for n_qubits=3\n"
@@ -744,7 +713,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "667a08fb",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +733,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "367cef01",
    "metadata": {},
    "source": [
     "Since we already have the circuits $\\mathcal{A}$ and $\\mathcal{Q}$, we can proceed to execute the `IQAE` model.\n",
@@ -776,7 +743,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "61c8fdc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +752,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c60f7c4",
    "metadata": {},
    "source": [
     "Then, we will create the following function that will integrate each sine and cosine and then sum every term to obtain the final Monte Carlo integral.\n",
@@ -814,7 +779,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8b2ae040",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +818,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ce744a4",
    "metadata": {},
    "source": [
     "Finally, we define the parameters for the IQAE model and execute the qfiae_integrator function"
@@ -863,7 +826,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a03bf967",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +841,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "159635ec",
    "metadata": {},
    "source": [
     "Once the QFIAE algorithm has been performed we can visualize and compare the results with the ones obtained by classical calculation"
@@ -888,7 +849,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7c08ede2",
    "metadata": {},
    "outputs": [
     {
@@ -912,9 +872,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf2",
+   "display_name": "myenv",
    "language": "python",
-   "name": "tf2"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -926,7 +886,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
