minor fixes to first text block

--- a/examples/qfiae/qfiae_demo.ipynb
+++ b/examples/qfiae/qfiae_demo.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Code at: [https://github.com/qiboteam/qibo/tree/master/examples/qfiae](https://github.com/qiboteam/qibo/tree/master/examples/qfiae).\n",
     "\n",
-    "Based in the paper [arXiv:2305.01686](https://arxiv.org/abs/2305.01686)"
+    "Based on the paper [arXiv:2305.01686](https://arxiv.org/abs/2305.01686)"
    ]
   },
   {
@@ -30,6 +30,7 @@
     "\n",
     " 2. A Quantum Neural Network (QNN) is employed to fit the function $f(x)$ using a linear ansatz of the following form:\n",
     " ![linear_ansatz](images/linear_ansatz.jpg)\n",
+    " \n",
     " where $\\mathcal{L}^{(i)}$ is the i-th layer, that for the one-dimensional case is composed of the trainable gates:\n",
     " $$ \\mathcal{A}^{(i)}=R_z(\\theta_{i,2})R_z(\\theta_{i,1})R_z(\\theta_{i,0}),$$\n",
     " and the encoding gate:\n",
