fixing final comments

--- a/examples/qfiae/qfiae_demo.ipynb
+++ b/examples/qfiae/qfiae_demo.ipynb
@@ -117,7 +117,7 @@
     "\n",
     "- `x_min_fit`: lower limit of the function we are going to fit. \n",
     "\n",
-    "Regarding the IQAE\n",
+    "Regarding the IQAE:\n",
     "\n",
     "- `nqubits`: number of qubits decided to build the good state in the IQAE algorithm.\n",
     "\n",
@@ -127,7 +127,15 @@
     "\n",
     "- `nshots`: number of shots used to perform IQAE. \n",
     "\n",
-    "- `method_iqae`: statistical method employed by IQAE. It will be *chernoff* or *beta*. "
+    "- `method_iqae`: statistical method employed by IQAE. It will be *chernoff* or *beta*. \n",
+    "\n",
+    "Regardind the results:\n",
+    "\n",
+    "- `qfiae_integral`: estimated value of the integral using QFIAE.\n",
+    "\n",
+    "- `iae_error`: uncertainty in the integral estimation due to IQAE.\n",
+    "\n",
+    "- `qf_error`: uncertainty in the integral estimation due to the function fitting using the QNN."
    ]
   },
   {
@@ -223,6 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Note that the chosen number of layers is intentionally larger than necessary to fit the function. \n",
+    "# This configuration ensures high accuracy while keeping a reasonable number of epochs.\n",
     "nlayers = 10\n",
     "nepochs = 100\n",
     "loss_treshold = 10^-4\n",
@@ -369,6 +379,7 @@
     "                                ndata=ndata_points,\n",
     "                                function=f, xmax=x_max_fit, \n",
     "                                xmin=x_min_fit)\n",
+    "# With the selected configuration, the training usually takes around 30'\n",
     "vqr.train_with_psr(\n",
     "    epochs=nepochs,\n",
     "    learning_rate=learning_rate,\n",
