--- a/doc/source/code-examples/tutorials/qfiae/qfiae_demo.ipynb
+++ b/doc/source/code-examples/tutorials/qfiae/qfiae_demo.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "Code at: [https://github.com/qiboteam/qibo/tree/master/examples/qfiae](https://github.com/qiboteam/qibo/tree/master/examples/qfiae).\n",
     "\n",
-    "Based in the paper [arXiv:2305.01686](https://arxiv.org/abs/2305.01686)"
+    "Based on the paper [arXiv:2305.01686](https://arxiv.org/abs/2305.01686)"
    ]
   },
   {
@@ -30,6 +30,7 @@
     "\n",
     " 2. A Quantum Neural Network (QNN) is employed to fit the function $f(x)$ using a linear ansatz of the following form:\n",
     " ![linear_ansatz](images/linear_ansatz.jpg)\n",
+    " \n",
     " where $\\mathcal{L}^{(i)}$ is the i-th layer, that for the one-dimensional case is composed of the trainable gates:\n",
     " $$ \\mathcal{A}^{(i)}=R_z(\\theta_{i,2})R_z(\\theta_{i,1})R_z(\\theta_{i,0}),$$\n",
     " and the encoding gate:\n",
@@ -116,7 +117,7 @@
     "\n",
     "- `x_min_fit`: lower limit of the function we are going to fit. \n",
     "\n",
-    "Regarding the IQAE\n",
+    "Regarding the IQAE:\n",
     "\n",
     "- `nqubits`: number of qubits decided to build the good state in the IQAE algorithm.\n",
     "\n",
@@ -126,7 +127,15 @@
     "\n",
     "- `nshots`: number of shots used to perform IQAE. \n",
     "\n",
-    "- `method_iqae`: statistical method employed by IQAE. It will be *chernoff* or *beta*. "
+    "- `method_iqae`: statistical method employed by IQAE. It will be *chernoff* or *beta*. \n",
+    "\n",
+    "Regardind the results:\n",
+    "\n",
+    "- `qfiae_integral`: estimated value of the integral using QFIAE.\n",
+    "\n",
+    "- `iae_error`: uncertainty in the integral estimation due to IQAE.\n",
+    "\n",
+    "- `qf_error`: uncertainty in the integral estimation due to the function fitting using the QNN."
    ]
   },
   {
@@ -222,6 +231,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Note that the chosen number of layers is intentionally larger than necessary to fit the function. \n",
+    "# This configuration ensures high accuracy while keeping a reasonable number of epochs.\n",
     "nlayers = 10\n",
     "nepochs = 100\n",
     "loss_treshold = 10^-4\n",
@@ -368,6 +379,7 @@
     "                                ndata=ndata_points,\n",
     "                                function=f, xmax=x_max_fit, \n",
     "                                xmin=x_min_fit)\n",
+    "# With the selected configuration, the training usually takes around 30'\n",
     "vqr.train_with_psr(\n",
     "    epochs=nepochs,\n",
     "    learning_rate=learning_rate,\n",
