rendering only png images

--- a/examples/qfiae/qfiae_demo.ipynb
+++ b/examples/qfiae/qfiae_demo.ipynb
@@ -29,7 +29,7 @@
     " 1. The function we want to integrate $f(x)$, the probability distribution $p(x)$ and the limits of the integral $x_{min}$, $x_{max}$ are defined\n",
     "\n",
     " 2. A Quantum Neural Network (QNN) is employed to fit the function $f(x)$ using a linear ansatz of the following form:\n",
-    " ![linear_ansatz](images/linear_ansatz.jpg)\n",
+    " ![linear_ansatz](images/linear_ansatz.png)\n",
     " \n",
     " where $\\mathcal{L}^{(i)}$ is the i-th layer, that for the one-dimensional case is composed of the trainable gates:\n",
     " $$ \\mathcal{A}^{(i)}=R_z(\\theta_{i,2})R_z(\\theta_{i,1})R_z(\\theta_{i,0}),$$\n",
