centering images and adding docs in doc

--- a/doc/source/code-examples/tutorials/qfiae/qfiae_demo.ipynb
+++ b/doc/source/code-examples/tutorials/qfiae/qfiae_demo.ipynb
@@ -29,7 +29,9 @@
     " 1. The function we want to integrate $f(x)$, the probability distribution $p(x)$ and the limits of the integral $x_{min}$, $x_{max}$ are defined\n",
     "\n",
     " 2. A Quantum Neural Network (QNN) is employed to fit the function $f(x)$ using a linear ansatz of the following form:\n",
-    " ![linear_ansatz](images/linear_ansatz.jpg)\n",
+    " <div align=\"center\">\n",
+    "    <img src=\"images/linear_ansatz.png\">\n",
+    "</div>\n",
     " \n",
     " where $\\mathcal{L}^{(i)}$ is the i-th layer, that for the one-dimensional case is composed of the trainable gates:\n",
     " $$ \\mathcal{A}^{(i)}=R_z(\\theta_{i,2})R_z(\\theta_{i,1})R_z(\\theta_{i,0}),$$\n",
@@ -42,7 +44,10 @@
     " 3. The Fourier coefficients of the quantum circuit that fits the function $f(x)$ are extracted using [discrete Fourier transform](https://numpy.org/doc/stable/reference/generated/numpy.fft.fft.html)\n",
     " \n",
     " 4. The Iterative Quantum Amplitude Estimation (IQAE) model of qibo, which corresponds with the following quantum circuit:\n",
-    " ![iqae](images/iqae.png)\n",
+    "  <div align=\"center\">\n",
+    "    <img src=\"images/iqae.png\">\n",
+    "</div>\n",
+    " \n",
     " is used to estimate the integral of each trigonometric piece, $\\sin(\\omega_i x)$ or $\\cos(\\omega_j x)$, of the Fourier series.\n",
     " \n",
     " 5. The integrals obtained are summed with their corresponding coefficients to derive the final integral result.\n",
