--- a/doc/source/code-examples/tutorials/qfiae/qfiae_demo.ipynb
+++ b/doc/source/code-examples/tutorials/qfiae/qfiae_demo.ipynb
@@ -161,8 +161,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "from qibo import gates\n",
-    "from qibo.models import Circuit\n",
+    "from qibo import Circuit, gates\n",
     "from qibo.models.iqae import IQAE"
    ]
   },
