add hyperopt installation

--- a/examples/dbf/dbf.ipynb
+++ b/examples/dbf/dbf.ipynb
@@ -16,13 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "c12a5b8c-328f-4127-b91d-2df776f05908",
+   "execution_count": null,
+   "id": "5bf7f589-dee5-4ce5-96c2-ee81ea6222e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install extra dependence\n",
-    "!pip install seaborn"
+    "# install extra dependences\n",
+    "# seaborn is a plotting library\n",
+    "!pip install seaborn \n",
+    "# hyperopt is required to optimize the DBF step\n",
+    "!pip install hyperopt"
    ]
   },
   {
