--- a/examples/dbi/dbi.ipynb
+++ b/examples/dbi/dbi.ipynb
@@ -21,11 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install extra dependences\n",
-    "# seaborn is a plotting library\n",
-    "!pip install seaborn\n",
-    "# hyperopt is required to optimize the DBF step\n",
-    "!pip install hyperopt"
+    "# Uncomment these lines if you don't have the following packages\n",
+    "# !pip install seaborn # plotting library\n",
+    "# !pip install hyperopt # required to optimize the DBF step"
    ]
   },
   {
@@ -554,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
