--- a/examples/dbi/dbi.ipynb
+++ b/examples/dbi/dbi.ipynb
@@ -17,13 +17,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91dc69bf-0404-4bd1-9990-0a8cf00951e6",
+   "id": "e1f362b8-eb73-456e-ae48-94c5f2a12649",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment these lines if you don't have the following packages\n",
-    "# !pip install seaborn # plotting library\n",
-    "# !pip install hyperopt # required to optimize the DBF step"
+    "!python -m pip install seaborn # plotting library\n",
+    "!python -m pip install hyperopt # required to optimize the DBF step"
    ]
   },
   {
@@ -531,6 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "685ca784",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -552,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
