--- a/examples/dbi/dbi.ipynb
+++ b/examples/dbi/dbi.ipynb
@@ -21,8 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m pip install seaborn # plotting library\n",
-    "!python -m pip install hyperopt # required to optimize the DBF step"
+    "!pip install seaborn # plotting library\n",
+    "!pip install hyperopt # required to optimize the DBF step"
    ]
   },
   {
@@ -538,9 +538,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (ipykernel)",
    "language": "python",
-   "name": "python3"
+   "name": "python"
   },
   "language_info": {
    "codemirror_mode": {
