use magic command %pip

--- a/examples/dbi/dbi.ipynb
+++ b/examples/dbi/dbi.ipynb
@@ -17,12 +17,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1f362b8-eb73-456e-ae48-94c5f2a12649",
+   "id": "b42faf70-f501-4579-802e-9c36085ec16c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install seaborn # plotting library\n",
-    "!pip install hyperopt # required to optimize the DBF step"
+    "%pip install seaborn # plotting library\n",
+    "%pip install hyperopt # required to optimize the DBF step"
    ]
   },
   {
@@ -538,9 +538,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ipykernel)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
