comment pip lines

--- a/examples/dbi/dbi.ipynb
+++ b/examples/dbi/dbi.ipynb
@@ -21,8 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install seaborn # plotting library\n",
-    "%pip install hyperopt # required to optimize the DBF step"
+    "# uncomment the following lines when you run this notebook on your local device\n",
+    "#pip install seaborn # plotting library\n",
+    "#pip install hyperopt # required to optimize the DBF step"
    ]
   },
   {
