Updates of names: flow->DBI, flowed->iterated

--- a/examples/dbi/E1_canonical.ipynb
+++ b/examples/dbi/E1_canonical.ipynb
@@ -88,7 +88,7 @@
    ],
    "source": [
     "dbi.NSTEPS = 15\n",
-    "dbi.flow_forwards_invariant()"
+    "dbi.iterate_forwards_fixed_generator()"
    ]
   },
   {
