1. Renamed additional functions into utils.py 2. Added empty __init__.py

--- a/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
+++ b/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
@@ -24,7 +24,7 @@
     "from qibo import hamiltonians, set_backend\n",
     "from qibo.hamiltonians import Hamiltonian, SymbolicHamiltonian\n",
     "from qibo.models.dbi.double_bracket import DoubleBracketGeneratorType, DoubleBracketIteration\n",
-    "from qibo.models.dbi.additional_double_bracket_functions import *\n",
+    "from qibo.models.dbi.utils import *\n",
     "from qibo.symbols import I, X, Z"
    ]
   },
