Modify descriptions and NSTEPS for better presentation

--- a/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
+++ b/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
@@ -166,7 +166,9 @@
    "metadata": {},
    "source": [
     "## Iteration from a list of operators\n",
-    "The idea of this strategy is to chose the Z operator that reduces the off-diagonal norm of the hamiltonian most efficiently. Given a list of operators (np.array), the function `select_best_dbr_generator_and_run` searches for the maximum decrease in off-diagonal norm for each operator and runs one double bracket rotation using the optimal operator from the list."
+    "The idea of this strategy is to chose the Z operator that reduces the off-diagonal norm of the hamiltonian most efficiently. Given a list of operators (np.array), the function `select_best_dbr_generator_and_run` searches for the maximum decrease in off-diagonal norm for each operator and runs one double bracket rotation using the optimal operator from the list.\n",
+    "\n",
+    "Note that the hyperopt settings can be set as positional arguments."
    ]
   },
   {
@@ -175,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NSTEPS = 10\n",
+    "NSTEPS = 15\n",
     "Z_optimal = []\n",
     "# add in initial values for plotting\n",
     "off_diagonal_norm_history = [dbi.off_diagonal_norm]\n",
@@ -185,7 +187,7 @@
     "    off_diagonal_norm_history.append(dbi.off_diagonal_norm)\n",
     "    steps.append(steps[-1]+step)\n",
     "    Z_optimal.append(Z_names[idx])\n",
-    "    print(f\"New optimized step at iteration {_+1}/{NSTEPS}: {step} with operator {Z_optimal[-1]}\")"
+    "    print(f\"New optimized step at iteration {_+1}/{NSTEPS}: {step} with operator {Z_optimal[-1]}, loss {dbi.off_diagonal_norm}\")"
    ]
   },
   {
@@ -254,8 +256,8 @@
     "        optimizer = tpe,\n",
     "        max_evals = 100,\n",
     "    )\n",
-    "    print(f\"New optimized step at iteration {s+1}/{NSTEPS}: {step}\")\n",
     "    dbi_canonical(step=step)\n",
+    "    print(f\"New optimized step at iteration {s+1}/{NSTEPS}: {step}, loss {dbi_canonical.off_diagonal_norm}\")\n",
     "    off_diagonal_norm_history_canonical.append(dbi_canonical.off_diagonal_norm)\n",
     "    steps_canonical.append(step)\n",
     "    steps_canonical_plot.append(steps_canonical_plot[-1]+step)"
@@ -276,6 +278,16 @@
     "plt.ylabel(\"Norm off-diagonal restriction\")\n",
     "plt.title(\"Compare Variational Pauli-Z with Canonical\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(off_diagonal_norm_history)\n",
+    "print(off_diagonal_norm_history_canonical)"
    ]
   },
   {
@@ -326,7 +338,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NSTEPS = 10\n",
     "Z_optimal_mixed = []\n",
     "# add in initial values for plotting\n",
     "off_diagonal_norm_history_mixed = [dbi_mixed.off_diagonal_norm]\n",
@@ -335,11 +346,11 @@
     "    idx, step = select_best_dbr_generator_and_run(dbi_mixed, Z_ops, compare_canonical=True)\n",
     "    off_diagonal_norm_history_mixed.append(dbi_mixed.off_diagonal_norm)\n",
     "    steps.append(steps[-1]+step)\n",
-    "    if idx == len(Z_names):\n",
+    "    if idx == len(Z_ops):\n",
     "        Z_optimal_mixed.append('Canonical')\n",
     "    else:\n",
     "        Z_optimal_mixed.append(Z_names[idx])\n",
-    "    print(f\"New optimized step at iteration {_+1}/{NSTEPS}: {step} with operator {Z_optimal_mixed[-1]}\")"
+    "    print(f\"New optimized step at iteration {_+1}/{NSTEPS}: {step} with operator {Z_optimal_mixed[-1]}, loss {dbi_mixed.off_diagonal_norm}\")"
    ]
   },
   {
@@ -367,7 +378,7 @@
     "After a few tests, we realize that the mixed strategy does not always outperform just using Pauli-Z operators. This could be caused by 2 reasons: \n",
     "\n",
     "1. Unstability of hyperopt\n",
-    "2. Tendency of canonical operator to get stuck"
+    "2. Tendency of canonical operator to get stuck at a near local minimum"
    ]
   },
   {
@@ -387,16 +398,6 @@
    "source": [
     "dbi_mixed_can= DoubleBracketIteration(deepcopy(H_TFIM),mode=DoubleBracketGeneratorType.canonical)\n",
     "print(\"Initial off diagonal norm\", dbi_mixed_can.off_diagonal_norm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(steps_canonical)\n",
-    "print(off_diagonal_norm_history_canonical)"
    ]
   },
   {
@@ -446,25 +447,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(off_diagonal_norm_history_mixed_can)\n",
-    "print(steps_mixed_can)\n",
-    "print(Z_optimal_mixed_can)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_histories(off_diagonal_norm_history_mixed_can, steps_mixed_can, Z_optimal_mixed_can)"
+    "plt.figure()\n",
+    "# plt.plot(steps, off_diagonal_norm_history, label=\"Pauli-Z\")\n",
+    "# plt.plot(steps_canonical, off_diagonal_norm_history_canonical, label=\"Canonical\")\n",
+    "plt.plot(off_diagonal_norm_history, label=\"Pauli-Z\")\n",
+    "plt.plot(off_diagonal_norm_history_canonical, label=\"Canonical\")\n",
+    "plt.plot(off_diagonal_norm_history_mixed, label=\"Mixed: optimal steps\")\n",
+    "plt.plot(off_diagonal_norm_history_mixed_can, label=\"Mixed: initial canonical\")\n",
+    "plt.xlabel(\"Iterations\")\n",
+    "plt.ylabel(\"Norm off-diagonal restriction\")\n",
+    "plt.title(\"Compare Variational Pauli-Z with Canonical\")\n",
+    "plt.legend()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that after two canonical steps, the diagonalization gets stuck at the same local minimum as the canonical trial. Hence, it may not be ideal to run the canonical generator at initial steps."
+    "This example also shows that the canonical generator is more likely to drive the model into a local minimum than variationally assigned diagonal operator, and that it is hard to get it unstuck even with the Pauli-Z operators."
    ]
   }
  ],
