Set hyperopt max_evals=200 (notebook 300)

--- a/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
+++ b/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
@@ -178,12 +178,13 @@
    "outputs": [],
    "source": [
     "NSTEPS = 15\n",
+    "max_evals = 300\n",
     "Z_optimal = []\n",
     "# add in initial values for plotting\n",
     "off_diagonal_norm_history = [dbi.off_diagonal_norm]\n",
     "steps = [0]\n",
     "for _ in range(NSTEPS):\n",
-    "    idx, step = select_best_dbr_generator_and_run(dbi, Z_ops, compare_canonical=False)\n",
+    "    idx, step = select_best_dbr_generator_and_run(dbi, Z_ops, compare_canonical=False, max_evals=max_evals)\n",
     "    off_diagonal_norm_history.append(dbi.off_diagonal_norm)\n",
     "    steps.append(steps[-1]+step)\n",
     "    Z_optimal.append(Z_names[idx])\n",
@@ -254,7 +255,7 @@
     "        step_max = 1,\n",
     "        space = hp.uniform,\n",
     "        optimizer = tpe,\n",
-    "        max_evals = 100,\n",
+    "        max_evals = max_evals,\n",
     "    )\n",
     "    dbi_canonical(step=step)\n",
     "    print(f\"New optimized step at iteration {s+1}/{NSTEPS}: {step}, loss {dbi_canonical.off_diagonal_norm}\")\n",
@@ -343,7 +344,7 @@
     "off_diagonal_norm_history_mixed = [dbi_mixed.off_diagonal_norm]\n",
     "steps = [0]\n",
     "for _ in range(NSTEPS):\n",
-    "    idx, step = select_best_dbr_generator_and_run(dbi_mixed, Z_ops, compare_canonical=True)\n",
+    "    idx, step = select_best_dbr_generator_and_run(dbi_mixed, Z_ops, compare_canonical=True, max_evals=max_evals)\n",
     "    off_diagonal_norm_history_mixed.append(dbi_mixed.off_diagonal_norm)\n",
     "    steps.append(steps[-1]+step)\n",
     "    if idx == len(Z_ops):\n",
