Fix error with Pauli-Z, added sign flip

--- a/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
+++ b/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
@@ -178,16 +178,20 @@
    "outputs": [],
    "source": [
     "NSTEPS = 15\n",
-    "max_evals = 300\n",
+    "max_evals = 100\n",
+    "step_max = 1\n",
     "Z_optimal = []\n",
     "# add in initial values for plotting\n",
     "off_diagonal_norm_history = [dbi.off_diagonal_norm]\n",
     "steps = [0]\n",
     "for _ in range(NSTEPS):\n",
-    "    idx, step = select_best_dbr_generator_and_run(dbi, Z_ops, compare_canonical=False, max_evals=max_evals)\n",
+    "    idx, step, flip_sign = select_best_dbr_generator_and_run(dbi, Z_ops, compare_canonical=False, max_evals=max_evals, step_max=step_max)\n",
     "    off_diagonal_norm_history.append(dbi.off_diagonal_norm)\n",
     "    steps.append(steps[-1]+step)\n",
-    "    Z_optimal.append(Z_names[idx])\n",
+    "    if flip_sign < 0:\n",
+    "        Z_optimal.append('-' + Z_names[idx])\n",
+    "    else:\n",
+    "        Z_optimal.append(Z_names[idx])\n",
     "    print(f\"New optimized step at iteration {_+1}/{NSTEPS}: {step} with operator {Z_optimal[-1]}, loss {dbi.off_diagonal_norm}\")"
    ]
   },
@@ -316,21 +320,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set the qibo backend (we suggest qibojit if N >= 20)\n",
-    "# alternatives: tensorflow (not optimized), numpy (when CPU not supported by jit)\n",
-    "set_backend(\"qibojit\", \"numba\")\n",
-    "\n",
-    "# hamiltonian parameters\n",
-    "nqubits = 5\n",
-    "h = 3\n",
-    "\n",
-    "# define the hamiltonian\n",
-    "H_TFIM = hamiltonians.TFIM(nqubits=nqubits, h=h)\n",
-    "\n",
-    "# initialize class\n",
-    "# Note: use deepcopy to prevent h being edited\n",
     "dbi_mixed = DoubleBracketIteration(deepcopy(H_TFIM),mode=DoubleBracketGeneratorType.single_commutator)\n",
-    "print(\"Initial off diagonal norm\", dbi.off_diagonal_norm)"
+    "print(\"Initial off diagonal norm\", dbi_mixed.off_diagonal_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbi_eval = deepcopy(dbi_mixed)\n",
+    "dbi_eval.mode = DoubleBracketGeneratorType.canonical\n",
+    "if step is None:\n",
+    "    step = dbi_eval.hyperopt_step(\n",
+    "        step_max=step_max,\n",
+    "        space=hp.uniform,\n",
+    "        optimizer=tpe,\n",
+    "        max_evals=max_evals,\n",
+    "    )\n",
+    "dbi_eval(step=step)\n",
+    "print('canonical norm', dbi_eval.off_diagonal_norm, 'step', step)"
    ]
   },
   {
@@ -344,11 +354,13 @@
     "off_diagonal_norm_history_mixed = [dbi_mixed.off_diagonal_norm]\n",
     "steps = [0]\n",
     "for _ in range(NSTEPS):\n",
-    "    idx, step = select_best_dbr_generator_and_run(dbi_mixed, Z_ops, compare_canonical=True, max_evals=max_evals)\n",
+    "    idx, step, flip_sign = select_best_dbr_generator_and_run(dbi_mixed, Z_ops, compare_canonical=True, max_evals=max_evals)\n",
     "    off_diagonal_norm_history_mixed.append(dbi_mixed.off_diagonal_norm)\n",
     "    steps.append(steps[-1]+step)\n",
     "    if idx == len(Z_ops):\n",
     "        Z_optimal_mixed.append('Canonical')\n",
+    "    elif flip_sign < 0:\n",
+    "        Z_optimal_mixed.append('-' + Z_names[idx])\n",
     "    else:\n",
     "        Z_optimal_mixed.append(Z_names[idx])\n",
     "    print(f\"New optimized step at iteration {_+1}/{NSTEPS}: {step} with operator {Z_optimal_mixed[-1]}, loss {dbi_mixed.off_diagonal_norm}\")"
@@ -432,13 +444,15 @@
     "remaining_NSTEPS = NSTEPS - cannonical_NSTEPS\n",
     "dbi_mixed_can.mode = DoubleBracketGeneratorType.single_commutator\n",
     "for _ in range(remaining_NSTEPS):\n",
-    "    idx, step = select_best_dbr_generator_and_run(dbi_mixed_can, Z_ops, compare_canonical=False)\n",
+    "    idx, step, flip_sign = select_best_dbr_generator_and_run(dbi_mixed_can, Z_ops, compare_canonical=False)\n",
     "    off_diagonal_norm_history_mixed_can.append(dbi_mixed_can.off_diagonal_norm)\n",
     "    steps_mixed_can.append(step)\n",
     "    if idx == len(Z_ops):\n",
-    "        Z_optimal_mixed_can.append(\"canonical\")\n",
+    "        Z_optimal_mixed.append('Canonical')\n",
+    "    elif flip_sign < 0:\n",
+    "        Z_optimal_mixed.append('-' + Z_names[idx])\n",
     "    else:\n",
-    "        Z_optimal_mixed_can.append(Z_names[idx])\n",
+    "        Z_optimal_mixed.append(Z_names[idx])\n",
     "    print(f\"New optimized step at iteration {_+1}/{remaining_NSTEPS}: {step} with operator {Z_optimal_mixed_can[-1]}\")"
    ]
   },
