Solve missing line 70 in test_models_dbi.py, added line dbi call with d=None

--- a/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
+++ b/examples/dbi/DBI_strategy_Pauli-Z_products.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,16 +122,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Qibo 0.2.4|INFO|2024-01-24 19:59:31]: Using qibojit (numba) backend on /CPU:0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial off diagonal norm 8.48528137423857\n"
+     ]
+    }
+   ],
    "source": [
     "# set the qibo backend (we suggest qibojit if N >= 20)\n",
     "# alternatives: tensorflow (not optimized), numpy (when CPU not supported by jit)\n",
     "set_backend(\"qibojit\", \"numba\")\n",
     "\n",
     "# hamiltonian parameters\n",
-    "nqubits = 5\n",
+    "nqubits = 2\n",
     "h = 3\n",
     "\n",
     "# define the hamiltonian\n",
@@ -141,6 +156,26 @@
     "# Note: use deepcopy to prevent h being edited\n",
     "dbi = DoubleBracketIteration(deepcopy(H_TFIM),mode=DoubleBracketGeneratorType.single_commutator)\n",
     "print(\"Initial off diagonal norm\", dbi.off_diagonal_norm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2.-0.j -0.-0.j -0.-0.j -0.-0.j]\n",
+      " [-0.-0.j  2.-0.j -0.-0.j -0.-0.j]\n",
+      " [-0.-0.j -0.-0.j  2.-0.j -0.-0.j]\n",
+      " [-0.-0.j -0.-0.j -0.-0.j -2.-0.j]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(H_TFIM.matrix)"
    ]
   },
   {
