Tests for double_bracket.py scheduling: test_double_bracket_iteration_scheduling_polynomial; test_double_bracket_iteration_scheduling_grid_hyperopt

--- a/examples/dbi/dbi_scheduling.ipynb
+++ b/examples/dbi/dbi_scheduling.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first generate the relationship between the step duration and the off-diagoanl norm (loss function) for the first step of the iteration."
+    "We first run a sweep of step duration to map the off-diagonal norm in this range."
    ]
   },
   {
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "dbi = DoubleBracketIteration(deepcopy(H_TFIM),mode=DoubleBracketGeneratorType.single_commutator)\n",
-    "d = Z_op\n",
+    "d = ZI_op\n",
     "# generate data for plotting sigma decrease of the first step\n",
     "s_space = np.linspace(1e-5, 0.6, 100)\n",
     "off_diagonal_norm_diff = []\n",
@@ -248,6 +248,13 @@
     "plt.title('hyperopt first step')\n",
     "plt.legend()\n",
     "print('The minimum for cost function in the tested range is:', step_grid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hence, we see that the strategy is indeed effective for finding the first minimum of the loss funciton for both the Z operator and the ZI operator."
    ]
   }
  ],
